[metadata]
name = redd-harvest
version = attr: redd_harvest.version.__version__
url = https://github.com/pyqlsa/redd-harvest
author = pyqlsa
description = Download media from Reddit posts.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
keywords = reddit, download
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = False
package_dir=
    =src
packages = find:
install_requires =
    click ==8.1.3
    pandas ==1.3.4
    praw ==7.5.0
    PyYaml ==6.0
    urllib3 ==1.26.7
python_requires = >=3.10

[options.entry_points]
console_scripts =
    redd-harvest = redd_harvest.harvest:main

[options.packages.find]
where=src

[options.package_data]
redd_harvest.data =
    example.yml
